# switchboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
playbooks/: cod_confirmation.yaml  refund_status.yaml
src/switchboard/: __init__.py  config.py
src/switchboard/agent/: __init__.py  observability.py  pipeline.py  playbooks.py  router.py  server.py
src/switchboard/bench/: __init__.py  metrics.py  providers.py  report.py  runner.py  texts.py
tests/: test_bench.py  test_metrics.py  test_playbooks.py  test_router.py  test_server.py
